[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://entities/enemies/TurretStateMachine.gd" type="Script" id=6]
[ext_resource path="res://entities/enemies/states/IdleState.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/states/AlertState.gd" type="Script" id=8]
[ext_resource path="res://entities/enemies/states/WalkState.gd" type="Script" id=9]
[ext_resource path="res://entities/enemies/states/DeadState.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5511, 31.944 )

[sub_resource type="CircleShape2D" id=2]
radius = 328.39

[node name="Turret" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
wander_radius = Vector2( 300, 0 )
speed = 10.0
max_h_speed = 60.0

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="FireTimer" type="Timer" parent="StateMachine/Alert"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 9.6885, -4.9261 )

[node name="RayCast2D" type="RayCast2D" parent="FirePosition"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="Body" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="StateMachine/Alert/FireTimer" to="StateMachine/Alert" method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
